[package]
name = "hepheastus_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
actix-multipart = "0.7.2"
tokio = {version = "1.40.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres"] }
chrono = "0.4.38"
colored = "2.1.0"
log = "0.4.22"
futures-util = "0.3.31"
base64 = "0.22.1"
